# kwcm1

./: .gitignore
src/: CMakeLists.txt  main.cpp
src/Trygonometria/: trygonometria.cpp  trygonometria.h
